--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "account-books-server",
+  "name": "Nest-api-template",
   "version": "0.0.1",
   "description": "",
-  "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -81,5 +80,14 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "keywords": [
+    "nestjs",
+    "typescript",
+    "template",
+    "restfulapi",
+    "jwt",
+    "typeorm"
+  ],
+  "author": "zhouronghua"
 }
